// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ripe's alias destination action: all fields 1`] = `
Object {
  "anonymousId": "jLb@sn4",
  "messageId": "0bf1e6be-be03-4328-8757-4119d4345b4b",
  "previousId": "jLb@sn4",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "userId": "jLb@sn4",
}
`;

exports[`Testing snapshot for Ripe's alias destination action: required fields 1`] = `
Object {
  "messageId": "17edd654-8818-4591-b5cc-dbc21488dad7",
  "previousId": "jLb@sn4",
  "timestamp": "2023-01-03T13:42:06.318Z",
  "userId": "jLb@sn4",
}
`;
